--- a/index.html
+++ b/index.html
@@ -6,10 +6,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Assignment</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital@1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <section class="First-part">
+        <div class="div-margin">
+            <h1 class="text-alein">Let’s Help Those Who Are More In Need</h1>
+            <p id="text-alein">Bangladesh distributed relief
+                among the flood affected families of a remote village namely Rampur from Balla Union of
+                Kalihati Thana in Tangail on Saturday, 26 june 2022</p>
+            <a id="link-button" target="_blank" href="">Donate Now</a>
+        </div>
+    </section>
+    <section>
+        <div>
+            <h1 class="text-alein2">Donate Today</h1>
+            <p id="text-alein2">With increasing support from the international community, non-governmental
+                organizations (NGOs) have
+                played an important role in Bangladesh since the early 1970s in providing emergency assistance to
+                disaster victims</p>
+        </div>
+    </section>
 </body>
+<footer>
+    <h2>Be Humble</h2>
+
+</footer>
 
 </html>
