--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p id="text-alein">Bangladesh distributed relief
                 among the flood affected families of a remote village namely Rampur from Balla Union of
                 Kalihati Thana in Tangail on Saturday, 26 june 2022</p>
-            <a id="link-button" target="_blank" href="">Donate Now</a>
+            <a class="link-button" target="_blank" href="">Donate Now</a>
         </div>
     </section>
     <section>
@@ -29,12 +29,53 @@
                 organizations (NGOs) have
                 played an important role in Bangladesh since the early 1970s in providing emergency assistance to
                 disaster victims</p>
+
+            <input class="text-center-alienment" type="text" value="Other amount  (taka)"><br>
+            <hr>
+            <a class="link-button" target="_blank" href="">Donate Now</a>
         </div>
+    </section><br><br>
+    <section>
+        <div class="our-donate-plane">
+            <h1>Our donate plane</h1>
+            <p>Thousands of families in Sylhet (Sylhet main city, Sunamganj, Habiganj), Netrokona (Netrokona Sadar,
+                Kalmakanda, Jatrapur), Kurigram Sadar, Sherpur (Jhinaigati, Nalitabari, Shribrodi, Nakla), Kurigram
+                (Roumari, Rajibpur, Sanandabari), Jamalpur (Bakshiganj, Islampur, Dewanganj), Brahmanbaria, Chandpur
+                submerged under the water. Their electricity is totally out, and they are completely disconnected.</p>
+        </div>
+        <div class="Our-donate">
+            <div class="width-size blue-color">
+                <img src="icons/food.png" alt="">
+                <h4>Food for a family</h4>
+                <p>With millions of Bangladeshis hit by devastating monsoon floods in the past month, the government and
+                    aid
+                    agencies are helping them with emergency food and shelter, while working to improve protection
+                    against
+                    future disasters.</p>
+
+            </div>
+            <div class="width-size pinkes-color">
+                <img src="icons/shelter.png" alt="">
+                <h4>shelter for a family</h4>
+                <p>Homelessness is really hard to overcome without help from someone else. Even with a job, some people
+                    struggle to find a shelter to regain their sense of peace</p>
+            </div>
+            <div class="width-size light-color">
+                <img src="icons/Frame-1.png" alt="">
+                <h4>Education for a child</h4>
+                <p>Early childhood education, also known as nursery education, is a branch of education theory that
+                    relates
+                    to the teaching of children from birth up to the age of eight</p>
+            </div>
+        </div>
+
     </section>
 </body>
 <footer>
-    <h2>Be Humble</h2>
-
+    <div class="footer">
+        <h2 id="color-setup">Be Humble</h2>
+        <h4 class="text-alienment">I'm gonna do it</h4>
+    </div>
 </footer>
 
 </html>
