--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 Kalihati Thana in Tangail on Saturday, 26 june 2022</p>
             <a class="link-button" target="_blank" href="">Donate Now</a>
         </div>
-    </section>
+    </section><br><br>
     <section>
         <div>
             <h1 class="text-alein2">Donate Today</h1>
@@ -30,11 +30,12 @@
                 played an important role in Bangladesh since the early 1970s in providing emergency assistance to
                 disaster victims</p>
 
-            <input class="text-center-alienment" type="text" value="Other amount  (taka)"><br>
-            <hr>
+            <input class="text-center-alienment" type="text" value="Other amount  (taka)">
+            <hr><br><br>
             <a class="link-button" target="_blank" href="">Donate Now</a>
         </div>
     </section><br><br>
+    <br><br><br><br>
     <section>
         <div class="our-donate-plane">
             <h1>Our donate plane</h1>
@@ -68,8 +69,21 @@
                     to the teaching of children from birth up to the age of eight</p>
             </div>
         </div>
-
-    </section>
+    </section><br><br><br><br>
+    <section>
+        <div class="our-donate-plane">
+            <h1>Get my update</h1>
+            <p>With their homes completely inundated, the villagers of Kheyar Alga, Kurigram have taken to living on
+                boats. They have removed the walls from their tin houses to minimise damage from the current of
+                floodwaters</p>
+        </div>
+        <div>
+            <form id="subscribe-button" action="">
+                <input class="email" type="text" value="email">
+                <input class="Subscribe" type="submit" value="Subscribe">
+            </form>
+        </div>
+    </section><br><br><br><br>
 </body>
 <footer>
     <div class="footer">
